--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -18,6 +18,7 @@
   }
 
   html {
+    direction: rtl;
     overflow: auto !important;
   }
 
@@ -231,7 +232,7 @@ textarea {
 
 .Vue-Toastification__toast-body {
   width: 100%;
-  font-family: peyda !important;
+  font-family: estedad !important;
   text-align: center;
   font-size: 15px !important;
 }
